--- a/template.html
+++ b/template.html
@@ -1,1 +1,39 @@
-
+<!doctype html>
+<html>
+    <head>
+        <title>Seaway Tech Website - Template</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="programs.html">Programs</a></li>
+                    <li><a href="guidance.html">Guidance</a></li>
+                    <li><a href="leader.html">Leaders</a></li>
+                    <li><a href="newsletter.html">Newsletter</a></li>
+                </ul>
+            </nav>
+            <h1>Seaway Tech Website</h1>
+        </header>
+        <main>
+            <h3></h3>
+            <br>
+            <p></p>
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="programs.html">Programs</a></li>
+                    <li><a href="guidance.html">Guidance</a></li>
+                    <li><a href="leader.html">Leaders</a></li>
+                    <li><a href="newsletter.html">Newsletter</a></li>
+                </ul>
+            </nav>
+            <p>&copy;Seaway Technical Center 2023</p>
+            <a href="template.html">Template</a>
+        </footer>
+    </body>
+</html>
