--- a/template.html
+++ b/template.html
@@ -33,6 +33,7 @@
                 </ul>
             </nav>
             <p>&copy;Seaway Technical Center 2023</p>
+            <p>7225 State Highway 56 | Norwood, NY  13668 | Number: (315) 353-2293 | Fax: (315) 353-7334</p>
             <a href="template.html">Template</a>
         </footer>
     </body>
