--- a/newsletter.html
+++ b/newsletter.html
@@ -18,9 +18,7 @@
             <h1>Seaway Tech Website</h1>
         </header>
         <main>
-            <h3></h3>
-            <br>
-            <p></p>
+            <img src="images/" alt="">
         </main>
         <footer>
             <nav>
