--- a/programs.html
+++ b/programs.html
@@ -20,11 +20,12 @@
         <main>
             <h3>Seaway Tech. Programs</h3>
             <br>
+            <img src="images/programs.jpeg" alt="seaway welding class">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque consectetur, felis ut rutrum aliquet, justo turpis ornare sapien, ut cursus tellus neque in risus. Donec pretium ultricies mollis. Orci varius.</p>
             <br>
             <h5>The following programs are offered at Seaway Tech:</h5>
             <br>
-            
+
         </main>
         <footer>
             <nav>
