--- a/guidance.html
+++ b/guidance.html
@@ -22,6 +22,8 @@
             <br>
             <p>We are student-centered professionals who provide social, emotional, academic, career and crisis counseling within Career and Technical Education and Alternative Education programming.</p>
             <br>
+            <img src="images/guidance.jpeg" alt="Guidance members">
+            <br>
             <p>We assist students in developing effective problem solving, decision making, conflict resolution skills, goal setting, career planning, and general life skills. We also foster a school environment that promotes good citizenship, collaborate with home schools to address student needs, and provide assistance in facilitating services for students.</p>
             <br>
             <h5>Like us on Facebook </h5>
