--- a/newsletter.html
+++ b/newsletter.html
@@ -18,7 +18,75 @@
             <h1>Seaway Tech Website</h1>
         </header>
         <main>
+            <h3>Contact Us</h3>
             <img src="images/" alt="">
+            <p>To find out more, please feel free to contact us.:</p>
+            <table>
+                <tbody>
+                    <form action="mailto:nicholas.newton@phcsd.org">
+                    <tr>
+                        <td>
+                            <label for="fname">First Name:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" name="fname">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="lname">Last Name:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" name="fname">
+                        /td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="sAddress">Street Address:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" name="sAddress">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="city">City:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" name="city">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="zip">Zip:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" name="zip">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="email">Email Address:</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" name="email">
+                        </td>
+                    </tr>
+                    </form>
+                </tbody>
+            </table>
         </main>
         <footer>
             <nav>
