--- a/guidance.html
+++ b/guidance.html
@@ -18,16 +18,18 @@
             <h1>Seaway Tech Website</h1>
         </header>
         <main>
-            <h3>Seaway Tech. Guidance Department</h3>
-            <br>
-            <p>We are student-centered professionals who provide social, emotional, academic, career and crisis counseling within Career and Technical Education and Alternative Education programming.</p>
-            <br>
-            <img src="images/guidance.jpeg" alt="Guidance members">
-            <br>
-            <p>We assist students in developing effective problem solving, decision making, conflict resolution skills, goal setting, career planning, and general life skills. We also foster a school environment that promotes good citizenship, collaborate with home schools to address student needs, and provide assistance in facilitating services for students.</p>
-            <br>
-            <h5>Like us on Facebook </h5>
-            <a href="https://www.facebook.com/Seaway-Career-Technical-Education-Center-317438095302971">Facebook</a>
+            <div id="container">
+                <h3>Seaway Tech. Guidance Department</h3>
+                <br>
+                <p>We are student-centered professionals who provide social, emotional, academic, career and crisis counseling within Career and Technical Education and Alternative Education programming.</p>
+                <br>
+                <img src="images/guidance.jpeg" alt="Guidance members" class="mainIMG">
+                <br>
+                <p>We assist students in developing effective problem solving, decision making, conflict resolution skills, goal setting, career planning, and general life skills. We also foster a school environment that promotes good citizenship, collaborate with home schools to address student needs, and provide assistance in facilitating services for students.</p>
+                <br>
+                <h5>Like us on Facebook </h5>
+                <a href="https://www.facebook.com/Seaway-Career-Technical-Education-Center-317438095302971" class="facebookBtn">Facebook</a>
+            </div>
         </main>
         <footer>
             <nav>
