--- a/newsletter.html
+++ b/newsletter.html
@@ -18,8 +18,9 @@
             <h1>Seaway Tech Website</h1>
         </header>
         <main>
+            <div id="container">
             <h3>Contact Us</h3>
-            <img src="images/" alt="">
+            <img src="images/logo.png" alt="navlogoImg" class="navlogoImg">
             <p>To find out more, please feel free to contact us.:</p>
             <table>
                 <tbody>
@@ -42,7 +43,7 @@
                     <tr>
                         <td>
                             <input type="text" name="fname">
-                        /td>
+                        </td>
                     </tr>
                     <tr>
                         <td>
@@ -84,9 +85,16 @@
                             <input type="text" name="email">
                         </td>
                     </tr>
+                    <tr>
+                        <td colspan="2">
+                            <input type="submit" value="submit" class="frmButton">
+                            <input type="reset" valuse="reset" class="frmButton">
+                        </td>
+                    </tr>
                     </form>
                 </tbody>
             </table>
+            </div>
         </main>
         <footer>
             <nav>
