--- a/programs.html
+++ b/programs.html
@@ -21,7 +21,7 @@
             <div id="container">
                 <h3>Seaway Tech. Programs</h3>
                 <br>
-                <img src="images/programs.jpeg" alt="seaway welding class" class="mainIMG">
+                <img src="images/programs.jpeg" alt="seaway welding class" class="mainIMG2">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque consectetur, felis ut rutrum aliquet, justo turpis ornare sapien, ut cursus tellus neque in risus. Donec pretium ultricies mollis. Orci varius.</p>
                 <br>
                 <h5>The following programs are offered at Seaway Tech:</h5>
