--- a/template.html
+++ b/template.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img src="images/logo.png" alt="headerLogo" class="headerLogo">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -15,7 +16,6 @@
                     <li><a href="newsletter.html">Newsletter</a></li>
                 </ul>
             </nav>
-            <h1>Seaway Tech Website</h1>
         </header>
         <main>
             <h3></h3>
