--- a/programs.html
+++ b/programs.html
@@ -27,6 +27,9 @@
                 <h5>The following programs are offered at Seaway Tech:</h5>
                 <br>
             </div>
+            <div id="colors">
+
+            </div>
         </main>
         <footer>
             <nav>
