--- a/template.html
+++ b/template.html
@@ -21,6 +21,9 @@
             <h3></h3>
             <br>
             <p></p>
+            <div id="colors">
+
+            </div>
         </main>
         <footer>
             <nav>
