--- a/guidance.html
+++ b/guidance.html
@@ -30,6 +30,9 @@
                 <h5>Like us on Facebook </h5>
                 <a href="https://www.facebook.com/Seaway-Career-Technical-Education-Center-317438095302971" class="facebookBtn">Facebook</a>
             </div>
+            <div id="colors">
+
+            </div>
         </main>
         <footer>
             <nav>
