--- a/newsletter.html
+++ b/newsletter.html
@@ -95,6 +95,9 @@
                 </tbody>
             </table>
             </div>
+            <div id="colors">
+
+            </div>
         </main>
         <footer>
             <nav>
