--- a/programs.html
+++ b/programs.html
@@ -16,6 +16,10 @@
                     <li><a href="newsletter.html">Newsletter</a></li>
                 </ul>
             </nav>
+            <div id="colors1">
+                <br>
+                <br>
+            </div>
         </header>
         <main>
             <div id="container">
